yaml/virtual-service-firefox.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: &appname reviews
spec:
  hosts:
  - *appname
  gateways:
  - mesh
  http:
  - match:
    - headers:
        user-agent:
          regex: '.*?(Firefox)/\d\d\.\d$'
    route:
    - destination:
        host: *appname
        subset: red
      weight: 100
  - route:
    - destination:
        host: *appname
        subset: gold
      weight: 100
