yaml/virtual-service-lb.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews.default.svc.cluster.local
    - reviews.crispcam.com
  gateways:
    - mesh
    - asm-gateway/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: reviews
            subset: gold
          weight: 50
        - destination:
            host: reviews
            subset: red
          weight: 50
        - destination:
            host: reviews
            subset: broken
          weight: 0
