yaml/virtual-service-public.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: &appname reviews
spec:
  hosts:
  - reviews.crisps.gcp-north.co.uk
  - *appname
  gateways:
  - mesh
  - gateway
  http:
  - match:
    - uri:
        prefix: /
#    timeout: 1s
    route:
    - destination:
        host: *appname
        subset: gold
      weight: 50
    - destination:
        host: *appname
        subset: red
      weight: 50
    - destination:
        host: *appname
        subset: broken
      weight: 0
